--- a/Facture/src/app/components/factura/factura.component.html
+++ b/Facture/src/app/components/factura/factura.component.html
@@ -81,6 +81,7 @@
                 </div>
             </div>
             <button type="submit" class="btn btn-block btn-primary m-3">Guardar factura</button>
+            <div>{{ alert }}</div>
         </form>
     </div>
 </div>
